k8s/manifests/03-backend-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: job-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: abhay33/job-portal-auth:v3
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: job-portal
spec:
  selector:
    app: auth-service
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: job-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: abhay33/job-portal-user:v3
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: job-portal
spec:
  selector:
    app: user-service
  ports:
  - protocol: TCP
    port: 5002
    targetPort: 5002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-service
  namespace: job-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-service
  template:
    metadata:
      labels:
        app: job-service
    spec:
      containers:
      - name: job-service
        image: abhay33/job-portal-job:v3
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: job-service
  namespace: job-portal
spec:
  selector:
    app: job-service
  ports:
  - protocol: TCP
    port: 5003
    targetPort: 5003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utils-service
  namespace: job-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: utils-service
  template:
    metadata:
      labels:
        app: utils-service
    spec:
      containers:
      - name: utils-service
        image: abhay33/job-portal-utils:v4
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: utils-service
  namespace: job-portal
spec:
  selector:
    app: utils-service
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: job-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: abhay33/job-portal-payments:v2
        ports:
        - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: job-portal
spec:
  selector:
    app: payment-service
  ports:
  - protocol: TCP
    port: 5004
    targetPort: 5004
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interview-service
  namespace: job-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interview-service
  template:
    metadata:
      labels:
        app: interview-service
    spec:
      containers:
      - name: interview-service
        image: abhay33/job-portal-interview:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: interview-service
  namespace: job-portal
spec:
  selector:
    app: interview-service
  ports:
  - protocol: TCP
    port: 5005
    targetPort: 5005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-service
  namespace: job-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-service
  template:
    metadata:
      labels:
        app: ml-service
    spec:
      containers:
      - name: ml-service
        image: abhay33/job-portal-ml:01
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ml-service
  namespace: job-portal
spec:
  selector:
    app: ml-service
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
