k8s/manifests/11-ingress-ml.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job-portal-ingress-ml
  namespace: job-portal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # ML Service - Rewrites /api/ml/recommend -> /recommend
      - path: /api/ml(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ml-service
            port:
              number: 8000
